Fix worker URL and event name parsing
- Point WORKER_URL to actual deployed endpoint (brendenferland.workers.dev)
- Strip "- When2meet" suffix from event titles
- Add wrangler.toml config for one-command deploys

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ document.addEventListener('mousemove', (e) => {
 /*═══════════════════════════════════════════════════════════════
   URL FETCH (via Cloudflare Worker)
 ═══════════════════════════════════════════════════════════════*/
-const WORKER_URL = 'https://when2solve-api.bfer.workers.dev';
+const WORKER_URL = 'https://when2solve-api.brendenferland.workers.dev';
 
 function fetchFromUrl() {
   const input = document.getElementById('w2mUrl');
